--- a/Lab1/Writeup.tex
+++ b/Lab1/Writeup.tex
@@ -55,8 +55,8 @@
 		\textbf{Frequency} & \textbf{Cable}  & $l:\lambda$   \\ \hline
 		$f_1$ = 100 kHz    & 12"             & $0.00168$     \\ \hline
 		                   & 180"            & $0.0252$      \\ \hline
-		$f_2$ = 100 MHz    & 12 "            & 1.68          \\ \hline
-		                   & 180  "          & 25.21         \\ \hline
+		$f_2$ = 100 MHz    & 12"             & 1.68          \\ \hline
+		                   & 180"            & 25.21         \\ \hline
 		\end{tabular}
 	\end{table}
 	
@@ -127,7 +127,7 @@
 	Short               & 0.02 & 0.81 & 1.79 & 2.49 & 2.89  & 3.00  & 2.77  & 2.29 & 1.65 & 0.76 & 0.02 & 116          & 0.02          \\ \hline
 	Open                & 2.75 & 2.59 & 2.19 & 1.59 & 0.736 & 0.032 & 0.643 & 1.53 & 2.21 & 2.61 & 2.73 & 193          & 0.02          \\ \hline
 	Matched             & 1.42 & 1.42 & 1.43 & 1.45 & 1.45  & 1.46  & 1.45  & 1.43 & 1.42 & 1.4  & 1.39 & 266          & 1.39          \\ \hline
-	Resistor            & 1.89 & 2.27 & 2.41 & 2.33 & 2.03  & 1.57  & 1.01  & 434  & 591  & 1.25 & 1.87 & 227          & 0.346         \\ \hline
+	Resistor            & 1.89 & 2.27 & 2.41 & 2.33 & 2.03  & 1.57  & 1.01  & 0.434& 0.591& 1.25 & 1.87 & 227          & 0.346         \\ \hline
 	Capacitor           & 2.79 & 2.61 & 2.17 & 1.53 & 0.687 & 0.02  & 0.79  & 1.65 & 2.31 & 2.69 & 2.77 & 191          & 0.02          \\ \hline
 	\end{tabular}
 \end{table}
@@ -142,6 +142,20 @@
 	
 	%Analysis 2.3
 	\item
+	\begin{table}[h]
+	\centering
+		\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|}
+		\hline
+		\multicolumn{12}{|c|}{\textbf{Probe Position ($\lambda$)}}                                                         		\\ \hline
+		\textbf{Load}       & 0      & $\frac{\lambda}{20}$    & $\frac{2\lambda}{20}$    & $\frac{3\lambda}{20}$    & $\frac{4\lambda}{20}$    & $\frac{5\lambda}{20}$      & $\frac{6\lambda}{20}$    & $\frac{7\lambda}{20}$    & $\frac{8\lambda}{20}$    & $\frac{9\lambda}{20}$    & $\frac{10\lambda}{20}$     		\\ \hline
+		Probe Position (mm) & 116    & 131  & 146  & 161  & 176  & 191    & 206  & 221  & 236  & 251  & 266    		\\ \hline
+		Short               & 0.0065 & 0.26 & 0.58 & 0.81 & 0.94 & 0.97   & 0.90 & 0.74 & 0.54 & 0.25 & 0.0065 		\\ \hline
+		Open                & 0.89   & 0.84 & 0.71 & 0.52 & 0.24 & 0.010  & 0.21 & 0.50 & 0.72 & 0.85 & 0.89   		\\ \hline
+		Matched             & 0.46   & 0.46 & 0.46 & 0.46 & 0.46 & 0.47   & 0.47 & 0.46 & 0.46 & 0.45 & 0.45   		\\ \hline
+		Resistor            & 0.61   & 0.74 & 0.78 & 0.76 & 0.66 & 0.51   & 0.33 & 0.14 & 0.19 & 0.41 & 0.61   		\\ \hline
+		Capacitor           & 0.91   & 0.85 & 0.70 & 0.50 & 0.22 & 0.0065 & 0.26 & 0.54 & 0.75 & 0.87 & 0.90   		\\ \hline
+		\end{tabular}
+	\end{table}
 \end{enumerate}
 \subsection{Questions}
 
