--- a/Lab1/Writeup.tex
+++ b/Lab1/Writeup.tex
@@ -15,6 +15,8 @@
 	$R_{1}$ =  & 2212 $\Omega$  \\
 	$R_{2}$ =  & 1808 $\Omega$      
 	\end{tabular}
+	\caption{Role of Wavelength - Measured Data}
+	\label{}
 \end{table}
 
 %Table of Measured Data%
@@ -28,6 +30,8 @@
 	$f_{2}$ = 100 MHz  & 12"                & 4.35   & 0.133  & 1.48    & 50        \\ \hline
 	                   & 180"               & 3.35   & 0.116  & 1.48    & 50        \\ \hline
 	\end{tabular}
+	\caption{Role of Wavelength - Measured Data}
+	\label{}
 \end{table}
 
 \subsection{Analysis}
@@ -44,6 +48,8 @@
 		$\lambda_{1}$ =  & 2176.43 $m$  \\
 		$\lambda_{2}$ =  & 2.17643 $m$      
 		\end{tabular}
+		\caption{Analysis 1.1}
+		\label{}
 	\end{table}
 	
 	%Analysis 1.2	
@@ -58,6 +64,8 @@
 		$f_2$ = 100 MHz    & 12"             & 1.68          \\ \hline
 		                   & 180"            & 25.21         \\ \hline
 		\end{tabular}
+		\caption{Analysis 1.2}
+		\label{}
 	\end{table}
 	
 	%Analysis 1.3
@@ -72,6 +80,8 @@
 		$f_2$ = 100 MHz    & 12"            & 4.35      & 0.133     & 1.96          \\ \hline
 		                   & 180"           & 3.35      & 0.116     & 1.51          \\ \hline
 		\end{tabular}
+		\caption{Analysis 1.3}
+		\label{}
 	\end{table}
 	
 	%Analysis 1.4
@@ -106,6 +116,8 @@
 	$1^{st}$ maximum       & 3.08    & 190                    \\ \hline
 	$2^{nd}$ maximum       & 0.020   & 266                    \\ \hline
 	\end{tabular}
+	\caption{Standing Waves - Measured Data}
+	\label{my-label}
 \end{table}
 
 \subsubsection{Loads}
@@ -115,6 +127,8 @@
 	Resistive termination value =  & 10 $\Omega$ \\
 	Capacitive termination value = & 39 $(pF)$      
 	\end{tabular}
+	\caption{Standing Waves - Loads}
+	\label{my-label}
 \end{table}
 
 
@@ -130,6 +144,8 @@
 	Resistor            & 1.89 & 2.27 & 2.41 & 2.33 & 2.03  & 1.57  & 1.01  & 0.434& 0.591& 1.25 & 1.87 & 227          & 0.346         \\ \hline
 	Capacitor           & 2.79 & 2.61 & 2.17 & 1.53 & 0.687 & 0.02  & 0.79  & 1.65 & 2.31 & 2.69 & 2.77 & 191          & 0.02          \\ \hline
 	\end{tabular}
+	\caption{Standing Waves - Loads}
+	\label{}
 \end{table}
 
 \subsection{Analysis}
@@ -141,7 +157,7 @@
 	\item The distance between the first minimum and maximum is 190 $mm$ - 116 $mm$ = 74 $mm$ or 0.247$\lambda$. This is very similar to the theoretical value of $\frac{\lambda}{4}$.
 	
 	%Analysis 2.3
-	\item
+	\item Insert Plotssssszzsss
 	\begin{table}[h]
 	\centering
 		\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|}
@@ -155,9 +171,16 @@
 		Resistor            & 0.61   & 0.74 & 0.78 & 0.76 & 0.66 & 0.51   & 0.33 & 0.14 & 0.19 & 0.41 & 0.61   		\\ \hline
 		Capacitor           & 0.91   & 0.85 & 0.70 & 0.50 & 0.22 & 0.0065 & 0.26 & 0.54 & 0.75 & 0.87 & 0.90   		\\ \hline
 		\end{tabular}
+		\caption{Analysis 2.3}
+		\label{}
 	\end{table}
 \end{enumerate}
+
 \subsection{Questions}
+\begin{enumerate}
+	\item What would you expect
+	\item Why was it acceptable
+\end{enumerate}
 
 \section{Network Analyzer}
 \subsection{Measured Data}
@@ -172,6 +195,8 @@
 	Open                                & 1                                   & -7.425                              	\\ \hline
 	50 Ohm (matched)                    & 0.001                               & 26.735                              	\\ \hline
 	\end{tabular}
+	\caption{Network Analyzer - Reflection Coefficients}
+	\label{}
 \end{table}
 
 \subsubsection{Scanner Antenna SWR}
@@ -182,6 +207,49 @@
 	Lower Frequency of 2.5 SWR                   & 156.7 MHz \\
 	Higher Frequency of 2.5 SWR                  & 222.7 MHz            
 	\end{tabular}
+	\caption{Nework Analyzer - Scanner Antenna}
+	\label{}
 \end{table}
+
+\subsection{Analysis}
+\begin{enumerate}
+	\item
+	
+	%Analysis 3.2
+	\item Using Eq. XXX for the reflection coefficient and the fact that $Z_0$ = 50 $\Omega$,
+	\begin{equation}
+		\Gamma = \frac{Z_L-Z_0}{Z_l+Z_0}
+	\end{equation}
+	The theoretical values for $\Gamma$ are shown in Table XXX. Furthermore, by converting our measured data from the network analyzer from the dB scale to the linear scale using Eq. XXX,
+	\begin{equation}
+		\vert\Gamma\vert_{linear} = 10^{\mid\Gamma\mid_{dB}/20}
+	\end{equation}
+	
+	\begin{table}[h]
+	\centering
+		\begin{tabular}{|l|c|c|c|}
+		\hline
+		\textbf{Load}     & $\vert\Gamma\vert_{dB}$ & $\vert\Gamma\vert_{linear}$ & $\vert\Gamma\vert_{theoritical}$ \\ \hline
+		Short (uncal)     & 0.751 	  & 1.09      &    1      \\ \hline
+		Short (cal)       & 1.00      & 1.12      &    1      \\ \hline
+		Open              & 1.00  	  & 1.12      &    1      \\ \hline
+		50 $\Omega$ (matched) & 0.001 & 1.00  	  &    0      \\ \hline
+		\end{tabular}
+		\caption{Analysis 3.2}
+		\label{}
+	\end{table}	
+	
+	\item
+\end{enumerate}
+\subsection{Questions}
+\begin{enumerate}
+	\item 
+	\item
+	\begin{enumerate}
+		\item
+		\item
+		\item
+	\end{enumerate}
+\end{enumerate}
 
 \end{document}
