--- a/Lab1/Writeup.tex
+++ b/Lab1/Writeup.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage{gensymb, amsmath}
 \usepackage[margin=0.75in]{geometry}
+\usepackage{float}
+\restylefloat{table}
 \begin{document}
 
 \title{Lab Write-up 1: Transmission Line Basics}
@@ -15,8 +17,6 @@
 	$R_{1}$ =  & 2212 $\Omega$  \\
 	$R_{2}$ =  & 1808 $\Omega$      
 	\end{tabular}
-	\caption{Role of Wavelength - Measured Data}
-	\label{}
 \end{table}
 
 %Table of Measured Data%
@@ -30,8 +30,8 @@
 	$f_{2}$ = 100 MHz  & 12"                & 4.35   & 0.133  & 1.48    & 50        \\ \hline
 	                   & 180"               & 3.35   & 0.116  & 1.48    & 50        \\ \hline
 	\end{tabular}
-	\caption{Role of Wavelength - Measured Data}
-	\label{}
+	\caption{Voltage and phase measurements for varying signal frequency and cable length}
+	\label{Data 1}
 \end{table}
 
 \subsection{Analysis}
@@ -41,20 +41,19 @@
 	\begin{equation}
 		\lambda = \frac{c}{f\sqrt{\varepsilon_{r}}}
 	\end{equation}
-	From equation 1 and the fact that $\varepsilon_{r}$ = 1.9,
+	From Equation 1, frequency values from Table 1, and given $\varepsilon_{r}$ = 1.9,
 	\begin{table}[h]
 	\centering
 		\begin{tabular}{rl}
 		$\lambda_{1}$ =  & 2176.43 $m$  \\
 		$\lambda_{2}$ =  & 2.17643 $m$      
 		\end{tabular}
-		\caption{Analysis 1.1}
-		\label{}
 	\end{table}
 	
 	%Analysis 1.2	
 	\item
-	\begin{table}[h]
+	\item
+	\begin{table}[H]
 		\centering
 		\begin{tabular}{|c|c|c|}
 		\hline
@@ -64,9 +63,10 @@
 		$f_2$ = 100 MHz    & 12"             & 1.68          \\ \hline
 		                   & 180"            & 25.21         \\ \hline
 		\end{tabular}
-		\caption{Analysis 1.2}
-		\label{}
+		\caption{Ratio of $l$ to $\lambda$ for varying signal frequency and cable length}
+		\label{Analysis 1.2}
 	\end{table}
+	\pagebreak
 	
 	%Analysis 1.3
 	\item
@@ -80,28 +80,28 @@
 		$f_2$ = 100 MHz    & 12"            & 4.35      & 0.133     & 1.96          \\ \hline
 		                   & 180"           & 3.35      & 0.116     & 1.51          \\ \hline
 		\end{tabular}
-		\caption{Analysis 1.3}
-		\label{}
+		\caption{Comparison of measured voltage ($v_2$) and expected voltage ($v_{out}$) from basic circuit theory}
+		\label{Analysis 1.3}
 	\end{table}
 	
 	%Analysis 1.4
-	\item For $f_1$ = 100 kHz, the computed $v_{out}$ is almost identical to the measured $v_2$ in lab using the 12" cable and very similar using the 180" cable. There is a 0.39 \% difference for the 12" cable and a 3.09\% difference for the 180" cable. On the other hand, $v_{out}$ is completely different from the measured $v_2$ in lab for $f_2$ = 100 MHz.
+	For $f_1$ = 100 kHz, the computed $v_{out}$ is almost identical to the measured $v_2$ in lab using the 12" cable and very similar using the 180" cable. There is a 0.39 \% difference for the 12" cable and a 3.09\% difference for the 180" cable. On the other hand, $v_{out}$ is completely different from the measured $v_2$ in lab for $f_2$ = 100 MHz (Table 3).
 	
 	%Analysis 1.5
-	\item As the ratio between the length of the cable and the wavelength in the circuit increases past 0.01, basic circuit analysis fails and we must use transmission line theory. If we do not, the phase delays of the signal and the interferences on the line from the reflected wave become significant, resulting in otherwise unexpected results.
+	\item As the ratio between the length of the cable and the wavelength in the circuit increases past 0.01, basic circuit analysis fails and we must use transmission line theory. If we do not, the phase delays of the signal and the interferences, constructive and destructive, on the line from the reflected wave become significant, causing in otherwise unexpected measurements.
 \end{enumerate}
 
 \subsection{Questions}
 \begin{enumerate}
-	\item Would you expect
+	\item I would expect that the output voltage of the RF signal source to be constant over the frequency range examined because the signal source was rated to be able to provide such a signal. However I did not observe and constant output voltage on channel 1 (Table 3). This is because there was a 24" BNC cable connecting the RF signal source to the oscilloscope. For the 100 MHz signal, this results in a 3.36 $l:\lambda$ ratio, so there is significant interference from the reflected wave and the line no longer acts as an ideal wire; it must be treated as a transmission line. 
 	\item Which of 
 	\begin{enumerate}
-		\item Integrated circuit
-		\item Electrical lines
-		\item Electrical lines
-		\item VHF antenna
+		\item Integrated circuit (500 MHz --> 1 GHz)
+		\item Electrical lines in house
+		\item Electrical lines connecting cities by hundreds of km
+		\item VHF antenna from rabbit ear antenna to TV
 	\end{enumerate}
-	\item Why is it necessary
+	\item A major assumption of a wire in DC analysis is that the signal travels instantly down the line. In fact, it is limited to the speed of light. Therefore, as the length of the line increases, the time delay from the moment the signal enters one end of a wire to the moment it reaches the other end of the wire increases. For a signal given by \emph{A}cos($\omega\emph{t}-\beta\emph{z}$), this time delay manifests itself as a phase shift of magnitude $\beta\epmh{z}$.
 \end{enumerate}
 
 \section{Standing Waves on the Slotted Line}
