--- a/Lab1/Writeup.tex
+++ b/Lab1/Writeup.tex
@@ -1,8 +1,8 @@
 \documentclass{article}
-\usepackage{gensymb, amsmath}
-\usepackage[margin=0.75in]{geometry}
-\usepackage{float}
+\usepackage{gensymb, amsmath, float, graphicx}
 \restylefloat{table}
+\usepackage[margin=0.75in]{geometry}
+\graphicspath{ {./Images} }
 \begin{document}
 
 \title{Lab Write-up 1: Transmission Line Basics}
@@ -20,7 +20,7 @@
 \end{table}
 
 %Table of Measured Data%
-\begin{table}[h]
+\begin{table}[H]
 \centering
 	\begin{tabular}{|c|c|c|c|c|c|}
 	\hline
@@ -66,11 +66,10 @@
 		\caption{Ratio of $l$ to $\lambda$ for varying signal frequency and cable length}
 		\label{Analysis 1.2}
 	\end{table}
-	\pagebreak
 	
 	%Analysis 1.3
 	\item
-	\begin{table}[h]
+	\begin{table}[H]
 	\centering
 		\begin{tabular}{|c|c|c|c|c|}
 		\hline
@@ -185,7 +184,7 @@
 \section{Network Analyzer}
 \subsection{Measured Data}
 \subsubsection{Reflection Coefficients}
-\begin{table}[h]
+\begin{table}[H]
 \centering
 	\begin{tabular}{|l|c|c|}
 	\hline
@@ -200,7 +199,7 @@
 \end{table}
 
 \subsubsection{Scanner Antenna SWR}
-\begin{table}[h]
+\begin{table}[H]
 	\begin{tabular}{rl}
 	\multicolumn{1}{c}{Frequency of SWR minimum} & 170.5 MHz \\
 	Minimum SWR value                            & 1.513     \\
@@ -226,7 +225,7 @@
 		\vert\Gamma\vert_{linear} = 10^{\mid\Gamma\mid_{dB}/20}
 	\end{equation}
 	
-	\begin{table}[h]
+	\begin{table}[H]
 	\centering
 		\begin{tabular}{|l|c|c|c|}
 		\hline
@@ -268,5 +267,52 @@
 		\item A 300 $\Omega$ transmission line system results in $S$ = 3.965. Thus, the antenna does not work well with this system.
 	\end{enumerate}
 \end{enumerate}
+
+\section{Images}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/RoleWave1.jpg}
+    \caption{Oscilloscope output for a 100 kHz signal along a 12" cable}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/RoleWave2.jpg}
+    \caption{Oscilloscope output for a 100 kHz signal along a 180" cable}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/RoleWave3.jpg}
+    \caption{Oscilloscope output for a 100 MHz signal along a 12" cable}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/RoleWave4.jpg}
+    \caption{Oscilloscope output for a 100 MHz signal along a 180" cable}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/NetShortUncal.jpg}
+    \caption{Uncalibrated network analyzer output for a shorted load}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/NetShortCal.jpg}
+    \caption{Calibrated network analyzer output for a shorted load}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/NetOpen.jpg}
+    \caption{Calibrated network analyzer output for a open load}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/NetMatch.jpg}
+    \caption{Calibrated network analyzer output for a 50 $\Omega$ matched load}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/NetSWR.jpg}
+    \caption{Network analyzer output for the scanner antenna SWR}
+\end{figure}
 
 \end{document}
