--- a/Lab1/Writeup.tex
+++ b/Lab1/Writeup.tex
@@ -177,8 +177,8 @@
 
 \subsection{Questions}
 \begin{enumerate}
-	\item What would you expect
-	\item Why was it acceptable
+	\item The standing wave pattern would have the same shape, but would have a phase shift.
+	\item The voltage behavior is equivalent at multiples of $\frac{\lambda}{2}$ away from the load, so the reference does not have to be at the load. Furthermore, a short termination should have a voltage of 0 at the load, so we searched for an equivalent reference point along the line.
 \end{enumerate}
 
 \section{Network Analyzer}
