--- a/Lab1/Writeup.tex
+++ b/Lab1/Writeup.tex
@@ -210,7 +210,7 @@
 \subsection{Analysis}
 \begin{enumerate}
 	%Analysis 3.1
-	\item \textbf{FINISH ME}
+	\item Calibrating the network analyzer allowed it to accurately measure the reflection coefficient for varying loads; the reflection coefficient was incorrectly measured when the network analyzer was uncalibrated. Calibration greatly lessened systematic error because the correct baseline upon which further measurements were made was correctly set through calibration. Random error, however, was unaffected by calibration.
 	
 	%Analysis 3.2
 	\item Using Eq. 2 for the reflection coefficient and the fact that $Z_0$ = 50 $\Omega$,
