--- a/Lab1/Writeup.tex
+++ b/Lab1/Writeup.tex
@@ -116,7 +116,7 @@
 	$1^{st}$ maximum       & 3.08    & 190                    \\ \hline
 	$2^{nd}$ maximum       & 0.020   & 266                    \\ \hline
 	\end{tabular}
-	\caption{Standing Waves - Measured Data}
+	\caption{Minimum and maximum voltage data along the shorted load}
 	\label{my-label}
 \end{table}
 
@@ -142,7 +142,7 @@
 	Resistor (V)        & 1.89 & 2.27 & 2.41 & 2.33 & 2.03  & 1.57  & 1.01  & 0.434& 0.591& 1.25 & 1.87 & 227          & 0.346         \\ \hline
 	Capacitor (V)       & 2.79 & 2.61 & 2.17 & 1.53 & 0.687 & 0.02  & 0.79  & 1.65 & 2.31 & 2.69 & 2.77 & 191          & 0.02          \\ \hline
 	\end{tabular}
-	\caption{Standing Waves - Loads}
+	\caption{Voltage data for varying locations along the line with varying loads}
 	\label{}
 \end{table}
 
@@ -169,7 +169,7 @@
 		Resistor (V)        & 0.61   & 0.74 & 0.78 & 0.76 & 0.66 & 0.51   & 0.33 & 0.14 & 0.19 & 0.41 & 0.61   		\\ \hline
 		Capacitor (V)       & 0.91   & 0.85 & 0.70 & 0.50 & 0.22 & 0.0065 & 0.26 & 0.54 & 0.75 & 0.87 & 0.90   		\\ \hline
 		\end{tabular}
-		\caption{Analysis 2.3}
+		\caption{Normalized voltage data with respect to the maximum voltage recorded for the short termination, 3.08 V}
 		\label{}
 	\end{table}
 \end{enumerate}
@@ -193,7 +193,7 @@
 	Open                                & 1                                   & -7.425                              	\\ \hline
 	50 Ohm (matched)                    & 0.001                               & 26.735                              	\\ \hline
 	\end{tabular}
-	\caption{Network Analyzer - Reflection Coefficients}
+	\caption{Network Analyzer - Reflection Coefficients Data}
 	\label{}
 \end{table}
 
@@ -232,7 +232,7 @@
 		Open                  & 1.12      &    1      \\ \hline
 		50 $\Omega$ (matched) & 1.00  	 &    0      \\ \hline
 		\end{tabular}
-		\caption{Analysis 3.2}
+		\caption{Comparing linear reflection coefficient data with theoretical results}
 		\label{}
 	\end{table}	
 
