--- a/Lab1/Writeup.tex
+++ b/Lab1/Writeup.tex
@@ -254,13 +254,16 @@
 	\item This antenna would not be good for broad-band communication systems between 20 Mhz - 2 GHz because the SWR is less than 2.5 only between 156.7 - 222.7 MHz from the Scanner Antenna SWR data. 
 	
 	%Question 3.2
-	\item Since $Z_L$ = 75.65 $\Omega$ and using Eq. 4 and 5
+	\item Since $Z_L$ = 75.65 $\Omega$ and using Eq. 4 and 5, pg. 4
 	\begin{enumerate}
 		\item A 50 $\Omega$ transmission line system is what the antenna was tested with and results in $S$ = 1.513 at 170.5 MHz. Thus, the antenna works well with this system.
 		\item A 75 $\Omega$ transmission line system is nearly matched and results in $S$ = 1.009 at 170.5 MHz. Thus, the antenna works well with this system.
 		\item A 300 $\Omega$ transmission line system results in $S$ = 3.965. Thus, the antenna does not work well with this system.
 	\end{enumerate}
 \end{enumerate}
+
+\section{Summary}
+Starting with the role of wavelength, I verified experimentally that changing the frequency of a signal and therefore its wavelength can greatly affect the voltage absorbed by the load due to phase shifting and reflections once the length of the line exceeds 0.01 $\lambda$. Whiles measuring standing waves with a slotted line, I could verify the sinusoidal behavior of voltage along the line. Furthermore, I could see how certain special cases: a short, open, and matched line elicited specific voltage responses along the line. Finally, with the network analyzer I first learned the importance of calibrating the instrument to reduce systematic error. Then I learned how I could use it to determine the operating range of a device, specifically in this case, a provided scanner antenna.
 
 \section{Figures \& Images}
 %Analysis 2.3 plots
