--- a/Lab2/Writeup.tex
+++ b/Lab2/Writeup.tex
@@ -2,7 +2,6 @@
 \usepackage{gensymb, amsmath, float, graphicx, epstopdf}
 \restylefloat{table}
 \usepackage[margin=0.75in]{geometry}
-\graphicspath{ {./Images} }
 \begin{document}
 
 \title{Lab Write-up 2: The Smith Chart}
@@ -101,5 +100,7 @@
 	\item
 	\item
 \end{enumerate}
+
+\section{Figures and Images}
 
 \end{document}
